Remove config for loot hexes, hardcode for now